# quitting-eurorack-v3-rs

./: .dockerignore  .drone.yml  .env  .gitignore  Cargo.toml  Dockerfile  README.md  Taskfile.yml  bun.lockb  docker-compose.yml  tailwind.config.js
src/: main.rs
src/api/: types.rs
src/config/: env_vars.rs
src/handlers/: home.rs
src/templates/: base.html  base.rs  home.html  mod.rs
src/templates/pages/: error_page.rs  home.html  home_page.rs
src/templates/partials/: contact.rs  mod.rs  pictures.rs  tag.html  tag.rs
src/templates/shared/: tag.html
