[package]
name = "quitting-eurorack-v3-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.3"
