[package]
name = "quitting-eurorack-v3-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
dotenvy = "0.15.7"
env_logger = "0.10.1"
log = "0.4.20"
maud = { version = "0.25.0", features = ["axum"] }
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_derive = "1.0.193"
serde_json = "1.0.108"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.3"
tokio = { version = "1.34.0", features = ["macros"] }
tower-http = { version = "0.5.0", features = ["fs"] }
